--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -2,33 +2,32 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #1A1A1D;
+  height: 100%;
+  color: #353535;
+  background-color: #242424;
 }
 
 .chat__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 100%;
+  height: 100%;
   background: #FFFFFF;
-  border-radius: 8px;
-  height: 60%;
-  width: 35%;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-  .chat {
-    height: 100%;
-  }
-
+@media (min-width: 640px) {
   .chat__container {
-    width: 100%;
-    height: 100%;
+    display: flex;
   }
 }
 
-@media (min-width: 480px) and (max-width: 1200px) {
+@media (min-width: 992px) {
   .chat__container {
-    width: 60%;
+    height: 75%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .chat__container {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
