--- a/client/src/components/InfoBar/InfoBar.scss
+++ b/client/src/components/InfoBar/InfoBar.scss
@@ -1,59 +1,112 @@
 .info-bar {
+  flex-shrink: 0;
+  padding: 0 15px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  background: #2979FF;
-  border-radius: 4px 4px 0 0;
+  background: #0071bc;
+  color: #FFFFFF;
   height: 60px;
   width: 100%;
 }
 
-.info-bar__room {
+.info-bar__menu {
   position: relative;
-  margin: 0;
-  padding: 19px 30px;
-  color: white;
+  margin-right: 20px;
+  width: 25px;
+  height: 20px;
 
+  &:before, &:after, span {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 25px;
+    height: 2px;
+    background-color: #FFFFFF;
+  }
 
   &:before {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    top: 50%;
-    left: 10px;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    border: 1px solid #ffffff;
+    top: 0;
   }
+
+  &:after {
+    bottom: 0;
+  }
+
+  span {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.info-bar__main {
+  flex-grow: 1;
+  text-align: center;
+}
+
+.info-bar__room {
+  margin: 0;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.info-bar__people {
+  margin: 0;
+  color: #FFFFFF;
+  font-size: 14px;
 }
 
 .info-bar__close {
   position: relative;
-  padding: 30px;
+  margin-left: 40px;
   width: 25px;
   height: 25px;
 
-  &:before {
+  &:before, &:after {
     content: '';
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 30px;
+    width: 27px;
     height: 2px;
     background-color: #FFFFFF;
-    transform: rotate(-45deg) translate(-10px, -10px);
+  }
+
+  &:before {
+    transform: rotate(-45deg) translate(-8px, -10px);
   }
 
   &:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 30px;
-    height: 2px;
-    background-color: #FFFFFF;
-    transform: rotate(45deg) translate(-10px, 10px);
+    transform: rotate(45deg) translate(-10px, 8px);
   }
+}
+
+@media (min-width: 640px) {
+  .info-bar {
+    background: #f2f3f7;
+    color: #353535;
+  }
+
+  .info-bar__menu {
+    display: none;
+  }
+
+  .info-bar__people {
+    color: #858585;
+  }
+
+  .info-bar__close {
+    &:before, &:after {
+      background-color: #0071bc;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .info-bar {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: 1200px) {
+
 }
