--- a/client/src/components/SendForm/SendForm.scss
+++ b/client/src/components/SendForm/SendForm.scss
@@ -1,21 +1,27 @@
 .send-form {
+  grid-area: sendform;
   display: flex;
-  border-top: 2px solid #D3D3D3;
+  //border-top: 2px solid #D3D3D3;
+  padding: 20px 30px;
+  background-color: #f2f3f7;
 }
 
-.send-form__input {
+.send-form__field {
+  resize: none;
+  overflow: auto;
   border: none;
-  border-radius: 0;
-  padding: 5%;
-  width: 80%;
-  font-size: 1.2em;
+  border-radius: 5px;
+  padding: 15px 30px;
+  width: 100%;
+  font-size: 18px;
+  font-family: inherit;
 }
 
 .send-form__button {
   color: #FFFFFF;
   text-transform: uppercase;
   text-decoration: none;
-  background: #2979FF;
+  background: #0071bc;
   padding: 20px;
   display: inline-block;
   border: none;
