--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -34,15 +34,16 @@ html, body {
 
 .sidebar {
   display: none;
-  padding: 15px;
+  padding: 0 15px;
   color: #FFFFFF;
   background-color: #0071bc;
 }
 
 .sidebar__title {
-  margin: 0 0 25px 0;
+  margin: 30px 0 25px 0;
   text-transform: uppercase;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .list {
@@ -61,13 +62,15 @@ html, body {
   }
 
   .sidebar {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     flex: 0 0 25%;
   }
 }
 
 @media (min-width: 992px) {
   .sidebar {
-    padding: 50px 30px;
+    padding: 0 30px;
   }
 }
