--- a/client/src/components/Messages/Messages.scss
+++ b/client/src/components/Messages/Messages.scss
@@ -1,14 +1,18 @@
 .messages {
-  grid-area: messages;
-  //padding: 5% 0;
   overflow: auto;
   flex: auto;
   border-top: 2px solid #f2f3f7;
   border-bottom: 2px solid #f2f3f7;
+  padding: 20px 0 0 0;
 
+
+  .avatar {
+    width: 50px;
+    height: 50px
+  }
 
 }
 
 .messages > div:first-child {
-  padding: 0 0 20px 0;
+
 }
