--- a/client/src/components/Join/Join.scss
+++ b/client/src/components/Join/Join.scss
@@ -1,9 +1,9 @@
 .join {
   display: flex;
   justify-content: center;
-  text-align: center;
-  height: 100vh;
   align-items: center;
+  height: 100vh;
+  text-align: center;
   background-color: #1A1A1D;
 }
 
@@ -13,9 +13,9 @@
 
 .join__input {
   margin-top: 20px;
-  border-radius: 0;
   padding: 15px 20px;
   width: 100%;
+  border-radius: 0;
 }
 
 .join__button {
@@ -39,6 +39,14 @@
   background: #2979FF;
   border: none;
   border-radius: 5px;
+}
+
+.greet {
+  color: #FFFFFF;
+}
+
+.error {
+  color: firebrick;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
