--- a/client/src/components/Messages/Message/Message.scss
+++ b/client/src/components/Messages/Message/Message.scss
@@ -50,7 +50,7 @@
 
 .messages__item-box {
   position: relative;
-  margin-top: 10px;
+  margin: 10px 0 0 0;
   padding: 10px 20px;
   max-width: 60%;
   background: #F3F3F3;
@@ -79,17 +79,6 @@
   white-space: pre-line;
 }
 
-/*.messageText {
-  width: 100%;
-  letter-spacing: 0;
-  float: left;
-  font-size: 1.1em;
-  word-wrap: break-word;
-}*/
-
-/*.messageText img {
-  vertical-align: middle;
-}*/
 
 
 
