--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -32,45 +32,18 @@ html, body {
   height: 100%;
 }
 
-.sidebar {
-  display: none;
-  padding: 0 15px;
-  color: #FFFFFF;
-  background-color: #0071bc;
-}
-
-.sidebar__title {
-  margin: 30px 0 25px 0;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  text-align: center;
-}
-
 .list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.error {
-  color: red;
+.sb-avatar {
+  margin-right: 15px;
 }
 
 @media (min-width: 640px) {
   .main {
     flex-grow: 1;
-  }
-
-  .sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex: 0 0 25%;
-  }
-}
-
-@media (min-width: 992px) {
-  .sidebar {
-    padding: 0 30px;
   }
 }
