--- a/client/src/components/Messages/Messages.scss
+++ b/client/src/components/Messages/Messages.scss
@@ -1,18 +1,12 @@
 .messages {
-  overflow: auto;
   flex: auto;
-  border-top: 2px solid #f2f3f7;
-  border-bottom: 2px solid #f2f3f7;
+  border-top: 1px solid #D3D9DE;
+  border-bottom: 1px solid #D3D9DE;
   padding: 20px 0 0 0;
-
+  overflow: auto;
 
   .avatar {
     width: 50px;
     height: 50px
   }
-
-}
-
-.messages > div:first-child {
-
 }
