--- a/client/src/components/SendForm/SendForm.scss
+++ b/client/src/components/SendForm/SendForm.scss
@@ -1,47 +1,89 @@
 .send-form {
   position: relative;
   display: flex;
-  padding: 20px 30px;
-  background-color: #f2f3f7;
+  padding: 20px 0;
+  background-color: #FAFBFC;
+
+  .emoji-picker-react {
+    position: absolute;
+    top: -330px;
+    left: 10px;
+  }
 }
 
 .send-form__field {
+  margin: 0 40px;
+  padding: 15px;
+  width: 100%;
+  height: 74px;
   resize: none;
   overflow: auto;
-  border: none;
+  border: 1px solid #D3D9DE;
   border-radius: 5px;
-  padding: 15px 60px 15px 30px;
-  width: 100%;
   font-size: 18px;
   font-family: inherit;
+  outline: none;
 }
 
 .send-form__button {
   position: absolute;
   top: 50%;
-  right: 50px;
-  transform: translateY(-50%);
+  right: 20px;
+  transform: translate(50%, -50%);
+  width: 24px;
+  height: 24px;
   padding: 10px;
   border: none;
-  background: none;
+  cursor: pointer;
+  outline: none;
+  background: url("../../icons/send.png") no-repeat;
+
+  &:hover, &:focus {
+    opacity: 0.5;
+  }
+}
+
+.send-form__button-emoji {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  border: none;
+  background: url("../../icons/smile.png") no-repeat;
   cursor: pointer;
   outline: none;
 
-  &:before {
-    content: '';
-    display: block;
-    border-top: 10px solid #858585;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    transform: rotate(-90deg);
+  &:hover, &:focus {
+    opacity: 0.5;
+  }
+}
+
+@media (min-width: 640px) {
+  .send-form__field {
+    margin: 0 60px;
   }
 
-  //color: #FFFFFF;
-  //text-transform: uppercase;
-  //text-decoration: none;
-  //
-  //padding: 20px;
-  //display: inline-block;
-  //
-  //width: 20%;
+  .send-form__button {
+    right: 30px;
+  }
+
+  .send-form__button-emoji {
+    left: 30px;
+  }
+}
+
+@media (min-width: 992px) {
+  .send-form__field {
+    margin: 0 80px;
+  }
+
+  .send-form__button {
+    right: 40px;
+  }
+
+  .send-form__button-emoji {
+    left: 40px;
+  }
 }
